fix(mobile): mobile toolbar for dark mode

--- a/src/main/frontend/mobile/index.css
+++ b/src/main/frontend/mobile/index.css
@@ -26,7 +26,8 @@
 }
 
 #mobile-editor-toolbar {
-  @apply fixed -bottom-1 left-0 w-full z-[9999] flex justify-between bg-gray-100 border-t border-gray-200;
+  @apply fixed -bottom-1 left-0 w-full z-[9999] flex justify-between bg-gray-100 border-t border-gray-200
+  dark:border-gray-800 dark:bg-[#222];
 
   will-change: transform;
   transform: translateY(calc(-1 * var(--ls-native-kb-height, 0)));
@@ -55,7 +56,7 @@
   }
 
   .toolbar-hide-keyboard {
-    @apply border-l border-gray-200;
+    @apply border-l border-gray-200 dark:border-gray-700;
   }
 }
 
